<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">營計寶NuCal</string>
    <string name="label_delete">Delete</string>

    <string name="menu4a_title">About NuCal</string>
    <string name="menu4d_title">Help</string>
    <string name="menu4c_title">Please select language</string>
    <string name="menu4c_msg0">English</string>
    <string name="menu4c_msg1">繁體中文</string>
    <string name="menu4c_msg2">简体中文</string>
    <string name="menu2a_t20_add">Add Food</string>
    <string name="menu2a_t20_edit">Edit Food</string>
    <string name="menu2a_text2a">Food</string>
    <string name="menu2a_text3a">Nutrition Facts/Information</string>
    <string name="menu2a_text4a">per 100g</string>
    <string name="menu2a_text4b">per 100ml</string>
    <string name="menu2a_text4c">per serving/package</string>
    <string name="menu2a_text5c_g">g</string>
    <string name="menu2a_text5c_ml">ml</string>
    <string name="menu2a_text5c_g_ml">g/ml</string>
    <string name="menu2a_text6a">Energy</string>
    <string name="menu2a_text6c">kcal</string>
    <string name="menu2a_text6d">kJ</string>
    <string name="menu2a_text7a">Protein</string>
    <string name="menu2a_text8a">Total Fat</string>
    <string name="menu2a_text9a">- Saturated Fat</string>
    <string name="menu2a_text10a">- Trans Fat</string>
    <string name="menu2a_text11a">Cholesterol</string>
    <string name="menu2a_text11c">mg</string>
    <string name="menu2a_text12a">Carbohydrates</string>
    <string name="menu2a_spinner13a_prompt">Choose a option</string>
    <string name="menu2a_text14a">- Dietary Fibre</string>
    <string name="menu2a_text15a">- Sugars</string>
    <string name="menu2a_text16a">Sodium</string>
    <string name="menu2a_spinner13_item0">Carbohydrates</string>
    <string name="menu2a_spinner13_item1">Total Carbohydrates</string>
    <string name="menu2a_spinner13_item2">Available Carbohydrates</string>
    <string name="menu2a_d00">Delete food?</string>
    <string name="menu2a_d01">Exit without saving?</string>
    <string name="menu2a_d02">Please enter - The amount of dietary fibre.</string>
    <string name="menu2a_d03">The amount of dietary fibre must be entered if total carbohydrates is selected.</string>
    <string name="menu2a_d04">Please double check the values of Total carbohydrates, Dietary fibre and Sugar.</string>
    <string name="menu2a_d05">Please double check the values of Total carbohydrates and Dietary fibre.</string>
    <string name="menu2a_d06">Please double check the values of Carbohydrates and Sugar.</string>
    <string name="menu2a_d07">Please double check the values of Total fat, Saturated fat and Trans fat.</string>
    <string name="menu2a_d08">Please double check the values of Total fat and Saturated fat.</string>
    <string name="menu2a_d09">Please double check the values of Total fat and Trans fat.</string>
    <string name="menu2a_d10">Please enter - The name of the food.</string>
    <string name="menu2a_d11">Food has already existed in the database.</string>
    <string name="menu2a_d12">Please enter - The food reference amount.</string>
    <string name="menu2a_d13">Total nutrients should not larger than food reference amount.</string>
    <string name="menu2a_d14">Please enter - The energy value or at least one nutrient value.</string>
    <string name="menu2a_d15">Please double check the values of Energy, Protein, Total Fat and Carbohydrates.</string>
    <string name="menu2a_d16">Add another food?</string>
    <string name="menu2b_t20_list">My Food List</string>
    <string name="menu2b_t20_row4a">Select Food</string>
    <string name="menu2b_t20_row4b">Details</string>
    <string name="menu2b_t20_row5a">Low Fat</string>
    <string name="menu2b_t20_row5b">Low Sodium</string>
    <string name="menu2b_t20_row5c">Low Sugar</string>
    <string name="menu2b_t20_row5d">3-Low</string>
    <string name="menu2b_d01">Please select fewer items. No of items should be less than 8</string>
    <string name="menu2b_spinner3b_prompt">Select sorting</string>
    <string name="menu2b_spinner3b_item0">Show All Food</string>
    <string name="menu2b_spinner3b_item1">Sort by Lowest Fat Content</string>
    <string name="menu2b_spinner3b_item2">Sort by Lowest Sodium Content</string>
    <string name="menu2b_spinner3b_item3">Sort by Lowest Sugar Content</string>
    <string name="menu2b_spinner3b_item4">Show 3-Low Food</string>
    <string name="menu3a_d00">No food is selected. Please add Food or go to My Food List to select food.</string>
    <string name="menu3a_d01">Delete My Intake History</string>
    <string name="menu3a_d02">Exceed 30 records, please delete record in My Intake History</string>
    <string name="menu3a_t30_add">My Intake</string>
    <string name="menu3a_t30_read">My Intake History</string>
    <string name="menu3a_text3a">Daily Energy Requirement</string>
    <string name="menu3a_text3c">kcal</string>
    <string name="menu3a_text4a">My Intake on</string>
    <string name="menu3a_text5b">g/ml</string>
    <string name="menu3a_t30_kcal">kcal</string>
    <string name="menu3a_t30_g">g</string>
    <string name="menu3a_t30_mg">mg</string>
    <string name="menu3a_type10_header_text4a">Food</string>
    <string name="menu3a_type10_header_text4b">Consumed</string>
    <string name="menu3a_type10_header_text4c">Nutrition Facts /Info</string>
    <string name="menu3a_type20_header_text6a">Nutrient</string>
    <string name="menu3a_type20_header_text6b">Total Energy/Nutrient Intake</string>
    <string name="menu3a_type20_header_text6c">%Daily Intake Upper Limit</string>
    <string name="menu3a_t30_t2_row0_col1">Energy</string>
    <string name="menu3a_t30_t2_row1_col1">Protein</string>
    <string name="menu3a_t30_t2_row2_col1">Total Fat</string>
    <string name="menu3a_t30_t2_row3_col1">Saturated Fat</string>
    <string name="menu3a_t30_t2_row4_col1">Trans Fat</string>
    <string name="menu3a_t30_t2_row5_col1">Cholesterol</string>
    <string name="menu3a_t30_t2_row6_col1">Carbohydrates</string>
    <string name="menu3a_t30_t2_row7_col1">Dietary Fibre</string>
    <string name="menu3a_t30_t2_row8_col1">Sugars</string>
    <string name="menu3a_t30_t2_row9_col1">Sodium</string>
    <string name="menu3b_t30_list">My Intake History</string>
    <string name="menu4b_d00">Exit without saving?</string>
    <string name="menu4b_d01">User Profile Name has already existed in the database.</string>
    <string name="menu4b_d02">Please enter the name.</string>
    <string name="menu4b_d03">Please enter the weight.</string>
    <string name="menu4b_d04">Please enter the height.</string>
    <string name="menu4b_d05">Please enter the name and weight.</string>
    <string name="menu4b_d06">Please enter the name and height.</string>
    <string name="menu4b_d07">Please enter the weight and height.</string>
    <string name="menu4b_d08">Please enter the name, weight and height.</string>
    <string name="menu4b_d09">The weight should not exceed 440lbs.</string>
    <string name="menu4b_d10">The weight should not exceed 200kg.</string>
    <string name="menu4b_d11">The height should not exceed 3m.</string>
    <string name="menu4b_d12">The height should not exceed 10ft.</string>
    <string name="menu4b_d13">Daily energy requirement calculated is based on your current body weight. If you are underweight or overweight, you are suggested to adjust the value based on your needs.</string>
    <string name="menu4b_d14">Delete user?</string>
    <string name="menu4b_t40_add">Add User</string>
    <string name="menu4b_t40_edit">User Profile</string>
    <string name="menu4b_text1a">User Profile</string>
    <string name="menu4b_text2a">Name</string>
    <string name="menu4b_text3a">Gender</string>
    <string name="menu4b_text3b">Male</string>
    <string name="menu4b_text3c">Female</string>
    <string name="menu4b_text4a">Weight</string>
    <string name="menu4b_text4b">lbs</string>
    <string name="menu4b_text4c">kg</string>
    <string name="menu4b_text5a">Height</string>
    <string name="menu4b_text5b">ft</string>
    <string name="menu4b_text5b_ft">ft</string>
    <string name="menu4b_text5b_inch">inch</string>
    <string name="menu4b_text5c">m</string>
    <string name="menu4b_text6a">Age</string>
    <string name="menu4b_text6c">Years</string>
    <string name="menu4b_text8a">Activity Level</string>
    <string name="menu4b_text9a">Calculate BMI</string>
    <string name="menu4b_text10a">Daily Energy Requirement</string>
    <string name="menu4b_text10c">kcal</string>
    <string name="menu4b_t41_list">User Profile</string>
    <string name="menu4b_t41_text2a">Add User</string>
    <string name="dyes">YES</string>
    <string name="dno">NO</string>
    <string name="dok">OK</string>
    <string name="dempty">No Records!</string>
    <string name="dexit_msg">Exit without saving?</string>
    <string name="t23_app_name">Bluetooth Data Transfer</string>
    <string name="send">Send Food Items</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Send/Receive.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected:</string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="t23_text2a">Food Items Data, count=</string>
    <string name="t23_text3a">Connect an Android device</string>
    <string name="t23_text4a">Send Data</string>
    <string name="t23_text5a">Receive Data</string>
    <string name="t23_text6a">Exit</string>
    <string name="t23_msg_read_ok">Data Receive Successed</string>
    <string name="t23_msg_write_ok">Data Send Successed</string>

    <string name="msg_select_foods_to_send">Please select foods to send.</string>
    <string name="err_bluetooth_not_supported_device">Your device does not support bluetooth function.</string>
    <string name="err_connnect_failed">Connection failed, please enable send mode on other device.</string>
    <string name="msg_select_bluetooth_mode">Please select transfer mode</string>
    <string name="mode_send">Send Mode</string>
    <string name="mode_recv">Recv Mode</string>
</resources>
